--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,24 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>First</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
+    <script src="main.js"></script>
+</head>
+<body>
+    <div class = "flex-container">
+        <div class = "header"></div>
+        <div class = "flex_container_below_header">
+            <div class = "left_bar"></div>
+            <div class = "flex_container_center_box">
+                <div class = "center_upper_box"></div>
+                <div class = "center_lower_box"></div>
+            </div>
+            <div class = "right_bar"></div>
+        </div>
+    </div> 
+</body>
+</html>
