Second layout fully formatted

--- a/second/index.html
+++ b/second/index.html
@@ -1,1 +1,32 @@
 <!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Second</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
+    <script src="main.js"></script>
+</head>
+<body>
+    <div class='flex-container'>
+        <div class='flex-container-sub1'>
+             <div class='purple_container'>
+                <div class='purple-rect'></div>
+            </div>
+             <div class='green-rect'></div>
+             <div class='blue-cir'></div>
+        </div>
+        <div class = 'outline-box'>
+            <div class='yellow-box'></div>
+        </div>
+        <div class='box-container'>
+            <div class = 'centered-box'>
+                <p>Hello</p>
+                <p>Friends!</p>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
