Third css/html layout exercise

--- a/third/index.html
+++ b/third/index.html
@@ -1,1 +1,28 @@
 <!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Third</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
+    <script src="main.js"></script>
+</head>
+<body>
+    <div class='flex-container'>
+        <div class='header'>
+            <div class='small-blue-square'></div>
+        </div>
+        <div class="text-container">
+            <div class='text-box'>This lesson describes how to hide the status bar on different versions of Android. Hiding the status bar (and optionally, the navigation bar) lets the content use more of the display space, thereby providing a more immersive user experience. </div>
+        </div>
+        <div class='blue-rect'></div>
+        <div class='lt-blue-rect'></div>
+        <div class='green-rect'></div>
+        <div class='yellow-rect'></div>
+    </div>
+
+    
+</body>
+</html>
